# Opt

./: .gitignore
examples/: CMakeLists.txt
examples/arap_mesh_deformation/: Makefile  out.ply
examples/arap_mesh_deformation/src/: main.cpp
examples/cotangent_mesh_smoothing/: cotangent_mesh_smoothing.t
examples/cotangent_mesh_smoothing/src/: CombinedSolver.h
examples/shape_from_shading/: sfsOutput.imagedump
examples/shared/: CombinedSolverParameters.h  CudaArray.h  cuda_SimpleMatrixUtil.h  make_template.inc
